feat: cleanup unused user properties